--- a/kbuildclient/src/css/Navbar.css
+++ b/kbuildclient/src/css/Navbar.css
@@ -1,17 +1,32 @@
 .main-navbar-container {
 	display: flex;
 	flex-direction: row;
-	margin-top: 16px;
+	margin-top: 1rem;
 }
 
 .navbar-logo-container {
 	flex: 2;
+	text-align: center;
 }
 
 .navbar-navigation-links-container {
-	flex: 2;
+	align-self: center;
+	flex: 1;
 }
 
-.active {
-	background-color: blue;
+.navbar-link {
+	font-size: 18px;
+	padding: 0.5em;
+	text-decoration: none;
+	color: black;
+	margin: 0em 0.5em;
+	border-radius: 4px;
+}
+
+.navbar-link:hover {
+	text-decoration: underline;
+}
+
+.navbar-link-active {
+	background-color: #b58db8;
 }
