--- a/kbuildclient/src/css/ProductContainer.css
+++ b/kbuildclient/src/css/ProductContainer.css
@@ -19,6 +19,7 @@
 	flex-direction: column;
 	margin-left: 1rem;
 	width: 100%;
+	min-width: 300px;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -26,7 +27,10 @@
 		font-size: 14px;
 	}
 	.product-info-container {
-		margin: 0px;
+		margin: 3px;
+	}
+	.product-image-container {
+		height: 250px;
 	}
 }
 
