--- a/kbuildclient/src/css/ProductContainer.css
+++ b/kbuildclient/src/css/ProductContainer.css
@@ -14,6 +14,17 @@
 	border-radius: 6px;
 }
 
+.unselectable {
+	/* Prevent the element from being selected
+	This happens when the user clicks on the left and right buttons in
+	a quick succesion */
+	-moz-user-select: -moz-none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
 .product-info-container {
 	display: flex;
 	flex-direction: column;
