--- a/kbuildclient/src/css/ProductContainer.css
+++ b/kbuildclient/src/css/ProductContainer.css
@@ -9,7 +9,8 @@
 
 .product-image {
 	height: 100%;
-	width: auto;
+	width: 350px;
+	object-fit: contain;
 	border: 2px solid #b58db8;
 	border-radius: 6px;
 }
