--- a/kbuildclient/src/css/ProductContainer.css
+++ b/kbuildclient/src/css/ProductContainer.css
@@ -60,6 +60,8 @@
 .product-information {
 	flex: 7;
 	font-size: 16px;
+	display: flex;
+	flex-direction: row;
 }
 
 .link-to-product {
@@ -70,4 +72,12 @@
 
 .link-to-product:hover {
 	text-decoration: underline;
+}
+
+.product-information-box {
+	flex: 3;
+}
+
+.quantity-box {
+	flex: 2;
 }
