--- a/kbuildclient/src/css/ProductContainer.css
+++ b/kbuildclient/src/css/ProductContainer.css
@@ -39,7 +39,7 @@
 	flex-direction: column;
 	margin-left: 1rem;
 	width: 100%;
-	min-width: 300px;
+	min-width: 400px;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -51,6 +51,10 @@
 	}
 	.product-image-container {
 		height: 250px;
+	}
+	.product-image {
+		height: 250px;
+		width: 250px;
 	}
 }
 
@@ -76,6 +80,7 @@
 
 .product-information-box {
 	flex: 3;
+	word-break: break-all;
 }
 
 .quantity-box {
