--- a/kbuildclient/src/css/QuantityBox.css
+++ b/kbuildclient/src/css/QuantityBox.css
@@ -1,18 +1,26 @@
-.quantity-box-container {
+.quantity-main-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-right: 50%;
-	margin-top: 10%;
+	position: relative;
+	right: 20%;
+	top: 7%;
 }
 
-.quantity-button {
-	margin-left: 40%;
-	margin-right: 20%;
+.quantity-button-container {
+	width: 32px;
+	height: 32px;
 	cursor: pointer;
 }
 
 .quantity-container {
-	text-align: center;
 	font-size: 20px;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	margin: 0;
 }
